Ensure Process with Praat vizualization waveform background is visible.

--- a/user-interface/projects/labbcat-view/src/app/praat/praat.component.css
+++ b/user-interface/projects/labbcat-view/src/app/praat/praat.component.css
@@ -96,9 +96,7 @@ fieldset.other {
         display: inline-block;
     }
     .item > .viz {
-        width: 50%;
-        background-image: url('/assets/sine.svg');
-        background-size: auto 100%;
+        width: 33vw;
         display: inline-table;
         padding: 0px;
         margin: 0px;
